SD-1: main styles add

--- a/src/assets/scss/base/_common.scss
+++ b/src/assets/scss/base/_common.scss
@@ -1,5 +1,10 @@
 html {
   box-sizing: border-box;
+  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+  overflow-y: scroll;
 }
 
 *,
@@ -10,9 +15,16 @@ html {
 
 body {
   font-family: var(--main-font);
-  color: var(--primary-txt-cl);
-  font-size: 16px;
+  color: var(--black-txt-cl);
+  font-size: 14px;
   line-height: 1.5;
+}
+
+ul,
+ol {
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 address {
@@ -25,13 +37,6 @@ h3,
 h4,
 p {
   margin-top: 0;
-}
-
-p {
-  margin-bottom: 20px;
-}
-
-p:last-child {
   margin-bottom: 0;
 }
 
@@ -41,22 +46,9 @@ img {
   height: auto;
 }
 
-.link {
+a {
   color: inherit;
   text-decoration: none;
-  transition: color var(--fast) linear;
-
-  &:hover,
-  &:focus {
-    color: var(--secondary-txt-cl);
-  }
-}
-
-.list {
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-left: 0;
-  list-style: none;
 }
 
 .visually-hidden {
@@ -70,14 +62,6 @@ img {
   overflow: hidden;
 }
 
-.scroll-hidden {
-  overflow: hidden;
-}
-
-.nowrap {
-  white-space: nowrap;
-}
-
 button {
   padding: 0;
   border: none;
@@ -85,43 +69,4 @@ button {
   color: inherit;
   background-color: transparent;
   cursor: pointer;
-}
-
-.section-title {
-  margin-bottom: 24px;
-
-  font-weight: 700;
-  font-size: 28px;
-  line-height: 1.2;
-  text-align: center;
-
-  color: var(--secondary-txt-cl);
-
-  @include mq(tablet) {
-    margin-bottom: 30px;
-    font-size: 36px;
-  }
-  @include mq(desktop) {
-    margin-bottom: 40px;
-    font-size: 48px;
-  }
-}
-
-.subtitle {
-  margin-bottom: 24px;
-
-  font-weight: 300;
-  font-size: 18px;
-  line-height: 1.5;
-
-  text-align: center;
-
-  color: var(--secondary-txt-cl);
-}
-
-.logo {
-  @include mq(tablet) {
-    width: 100px;
-    height: 30px;
-  }
 }
