--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,4 +1,7 @@
 <header class="header">
-    {% include 'components/nav-menu.html' %}
+  <div class="container header__container">
+    <a href="#" class="header__logo" aria-label="logo"> <span>dent</span></a
+    >{% include 'components/nav-menu.html' %}
+  </div>
 </header>
 {% include 'components/mobile-menu.html' %}
