--- a/src/assets/scss/base/_common.scss
+++ b/src/assets/scss/base/_common.scss
@@ -1,10 +1,5 @@
 html {
   box-sizing: border-box;
-  width: 100%;
-  max-width: 100%;
-  overflow-x: hidden;
-  scroll-behavior: smooth;
-  overflow-y: scroll;
 }
 
 *,
@@ -15,9 +10,9 @@ html {
 
 body {
   font-family: var(--main-font);
-  color: var(--black-txt-cl);
+  color: var(--primary-txt-cl);
+  background-color: var(--primary-bg);
   font-size: 14px;
-  line-height: 1.5;
 }
 
 ul,
@@ -36,8 +31,7 @@ h2,
 h3,
 h4,
 p {
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0;
 }
 
 img {
@@ -49,6 +43,7 @@ img {
 a {
   color: inherit;
   text-decoration: none;
+  transition: color var(--fast) linear;
 }
 
 .visually-hidden {
@@ -69,4 +64,16 @@ button {
   color: inherit;
   background-color: transparent;
   cursor: pointer;
+}
+
+.scroll-hidden {
+  overflow: hidden;
+}
+
+.nowrap {
+  white-space: nowrap;
+}
+
+.page {
+  overflow: hidden;
 }
