--- a/src/assets/scss/base/_container.scss
+++ b/src/assets/scss/base/_container.scss
@@ -1,14 +1,12 @@
 .container {
   width: 100%;
-  padding-left: 24px;
-  padding-right: 24px;
   margin-right: auto;
   margin-left: auto;
 
-  @include mq(mobile) {
+  @include mq(mobile-only) {
     max-width: 320px;
-    margin-right: auto;
-    margin-left: auto;
+    padding-left: 24px;
+    padding-right: 24px;
   }
 
   @include mq(tablet) {
@@ -19,7 +17,5 @@
 
   @include mq(desktop) {
     max-width: 1280px;
-    padding-left: 112px;
-    padding-right: 112px;
   }
 }
