--- a/src/assets/scss/components/_buttons.scss
+++ b/src/assets/scss/components/_buttons.scss
@@ -6,20 +6,16 @@
   text-decoration: none;
   white-space: nowrap;
   cursor: pointer;
-  border: 1px solid --violet-bg;
+  border: 1px solid transparent;
   border-radius: 16px;
-
-  color: var(--white-bg);
-  background-color: var(--violet-bg);
-
-/*   transition: color var(--fast) linear, background-color var(--fast) linear,
-    border var(--fast) linear; */
-
+  color: var(--accent-txt-cl);
+  background-color: var(--normal-bg);
   &:hover,
   &:focus {
-    color: var(--accent-cl);
-    border: 1px solid var(--green-bg);
-    background-color: var(--green-bg);
+    background-color: var(--hover-bg);
+  }
+  &:active {
+    background-color: var(--active-bg);
   }
 
   @include mq(tablet) {
