--- a/src/assets/scss/utils/_mixins.scss
+++ b/src/assets/scss/utils/_mixins.scss
@@ -1,20 +1,13 @@
 /* FONT-FASE */
 @mixin font-face($font-name, $path, $weight: 400, $style: normal, $display: swap) {
   @font-face {
-    font-family: quote($font-name); /* IE9 Compat Modes */
-    src: url($path + '.eot');
-    src: url($path + '.eot?#iefix') format('embedded-opentype'),
-      /* Safari, Android, iOS */ url($path + '.woff') format('woff'),
-      /* Modern Browsers */ url($path + '.woff2') format('woff2'),
-      /* Legacy iOS */ url($path + '.ttf') format('truetype');
+    font-family: quote($font-name);
+    src: url($path + '.woff') format('woff'), url($path + '.woff2') format('woff2');
     font-weight: $weight;
     font-style: $style;
     font-display: $display;
   }
 }
-/* Usage
-@include font-face ('Acrom', '../fonts/Acrom/Acrom-Thin', 100);
-    */
 
 /* SET REM FUNCTION */
 @function rem($px) {
@@ -28,7 +21,7 @@
   $desktop: 1280px;
 
   @if $range == mobile-only {
-    @media (max-width: $tablet - 0.02) {
+    @media (max-width: #{$tablet - 0.02}) {
       @content;
     }
   } @else if $range == mobile {
@@ -62,10 +55,3 @@
     }
   }
 }
-/*  Usage
-.block {
-    @include mq(mobile) {
-        margin-bottom: 16px;
-    };
-  }
-*/
