--- a/src/html/partials/components/nav-menu.html
+++ b/src/html/partials/components/nav-menu.html
@@ -1,3 +1,10 @@
 <nav class="nav">
-  
+  <ul class="nav-list">
+    <li><a href="#">Home</a></li>
+    <li><a href="#about-us">About us</a></li>
+    <li><a href="#services">Our services</a></li>
+    <li><a href="#team">Our Team</a></li>
+    <li><a href="#reviews">Reviews</a></li>
+    <li><a href="#contacts">Contacts</a></li>
+  </ul>
 </nav>
