--- a/src/html/partials/layout.html
+++ b/src/html/partials/layout.html
@@ -1,19 +1,12 @@
-{% set lang = "pl" %} {% set title = "New Project" %}
-
+{% set lang = "en" %} {% set title = "Smile Dent" %}
 <!DOCTYPE html>
 <html lang="{{ lang }}">
-
-<head>
-  {%include 'head.html' %}
-</head>
-
-<body>
-  {% include 'gtm.html' %}
-
-  <div class="page">{% block content %} {% endblock %}</div>
-
-  {% include 'modal.html' %}
-  <script src="assets/js/app.js"></script>
-</body>
-
+  <head>
+    {%include 'head.html' %}
+  </head>
+  <body>
+    <div class="page">{% block content %} {% endblock %}</div>
+    {% include 'components/modal.html' %}
+    <script src="assets/js/app.js"></script>
+  </body>
 </html>
