--- a/src/html/partials/sections/about_us.html
+++ b/src/html/partials/sections/about_us.html
@@ -1,3 +1,3 @@
-<section class="about-us">
-    about us
+<section class="about-us" id="about-us">
+  <div class="container">about us</div>
 </section>
