--- a/src/html/partials/sections/contacts.html
+++ b/src/html/partials/sections/contacts.html
@@ -1,3 +1,3 @@
-<section class="contacts">
-    contacts
+<section class="contacts" id="contacts">
+  <div class="container">contacts</div>
 </section>
