--- a/src/html/partials/sections/hero.html
+++ b/src/html/partials/sections/hero.html
@@ -1,5 +1,3 @@
-<section class="section">
-  <div class="container">
-      Hero
-  </div>
+<section>
+  <div class="container">Hero</div>
 </section>
