--- a/src/html/partials/sections/our_service.html
+++ b/src/html/partials/sections/our_service.html
@@ -1,3 +1,3 @@
-<section class="our-service">
-    Our service
+<section class="our-service" id="services">
+  <div class="container">Our service</div>
 </section>
