SD:3-add-icons-sprite
add icon fonts add sprite, add svg optimise

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -5,6 +5,7 @@
 @import './utils/variables';
 
 @import './base/fonts';
+@import './base/icons';
 @import './base/common';
 @import './base/container';
 @import './base/section';
