--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,3 +1,19 @@
 <footer class="footer">
-  <div class="container">footer</div>
+  <div class="container">
+    footer
+    <div>
+      test icon fonts
+
+      <i class="icon-facebook"></i>
+      <i class="icon-instagram"></i>
+      <i class="icon-logo"></i>
+      <i class="icon-phone"></i>
+      <i class="icon-skype"></i>
+      <i class="icon-softryzen"></i>
+      <i class="icon-whatsapp"></i>
+      <svg class="svg-email" aria-label="email">
+        <use xlink:href="./assets/images/sprite.svg#icon-email"></use>
+      </svg>
+    </div>
+  </div>
 </footer>
