--- a/src/html/partials/sections/our_reviews.html
+++ b/src/html/partials/sections/our_reviews.html
@@ -1,3 +1,3 @@
 <section class="our-reviews" id="reviews">
-  <div class="container">Our Reviews</div>
+  <div class="container">Our Reviews <i class="icon-star"></i></div>
 </section>
