--- a/src/html/partials/sections/our_service.html
+++ b/src/html/partials/sections/our_service.html
@@ -1,3 +1,49 @@
 <section class="our-service" id="services">
-  <div class="container">Our service</div>
+  <div class="container">
+    Our service
+    <div>
+      <img
+        class="header-logo"
+        src="./assets/images/svg/braces-rubber-bands.svg"
+        alt="braces-rubber-bands"
+        width="80"
+        height="80"
+      />
+      <img
+        class="header-logo"
+        src="./assets/images/svg/cavity.svg"
+        alt="cavity"
+        width="80"
+        height="80"
+      />
+      <img
+        class="header-logo"
+        src="./assets/images/svg/forceps.svg"
+        alt="forceps"
+        width="80"
+        height="80"
+      />
+      <img
+        class="header-logo"
+        src="./assets/images/svg/implant.svg"
+        alt="implant"
+        width="80"
+        height="80"
+      />
+      <img
+        class="header-logo"
+        src="./assets/images/svg/tooth.svg"
+        alt="tooth"
+        width="80"
+        height="80"
+      />
+      <img
+        class="header-logo"
+        src="./assets/images/svg/tooth-loosen.svg"
+        alt="tooth"
+        width="80"
+        height="80"
+      />
+    </div>
+  </div>
 </section>
