--- a/src/html/partials/sections/our_team.html
+++ b/src/html/partials/sections/our_team.html
@@ -1,3 +1,13 @@
 <section class="our-team" id="team">
-  <div class="container">Our team</div>
+  <div class="container">
+    Our team
+    <div>
+      <svg class="svg-arrow" aria-label="arrow-left">
+        <use xlink:href="./assets/images/sprite.svg#icon-arrow-left"></use>
+      </svg>
+      <svg class="svg-arrow" aria-label="arrow-right">
+        <use xlink:href="./assets/images/sprite.svg#icon-arrow-right"></use>
+      </svg>
+    </div>
+  </div>
 </section>
