--- a/src/assets/scss/base/_common.scss
+++ b/src/assets/scss/base/_common.scss
@@ -1,11 +1,14 @@
-html {
-  box-sizing: border-box;
+* {
+  padding: 0px;
+  margin: 0px;
+  border: 0px;
 }
-
 *,
-*::before,
-*::after {
-  box-sizing: inherit;
+*:before,
+*:after {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
@@ -13,13 +16,20 @@ body {
   color: var(--primary-txt-cl);
   background-color: var(--primary-bg);
   font-size: 14px;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  -webkit-font-smoothing: antialiased;
 }
-
+html,
+body {
+  height: 100%;
+  min-width: var(--mobile);
+}
 ul,
-ol {
+ol,
+li {
   list-style: none;
-  padding: 0;
-  margin: 0;
 }
 
 address {
@@ -31,13 +41,12 @@ h2,
 h3,
 h4,
 p {
-  margin: 0;
+  font-weight: inherit;
+  font-size: inherit;
 }
 
 img {
-  display: block;
-  max-width: 100%;
-  height: auto;
+  vertical-align: top;
 }
 
 a {
@@ -45,7 +54,13 @@ a {
   text-decoration: none;
   transition: color var(--fast) linear;
 }
-
+a:link,
+a:visited {
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: none;
+}
 .visually-hidden {
   position: absolute !important;
   clip: rect(1px 1px 1px 1px);
@@ -56,11 +71,14 @@ a {
   width: 1px !important;
   overflow: hidden;
 }
-
+input,
+button,
+textarea {
+  font-family: var(--main-font);
+  font-size: inherit;
+}
 button {
-  padding: 0;
   border: none;
-  font: inherit;
   color: inherit;
   background-color: transparent;
   cursor: pointer;
@@ -75,5 +93,18 @@ button {
 }
 
 .page {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
   overflow: hidden;
+  // Притискаємо footer
+  > main {
+    position: relative;
+    z-index: 2;
+    flex: 1 1 auto;
+  }
+  // Фікс для слайдерів
+  > * {
+    min-width: 0;
+  }
 }
