SD:15-fix-sprite-svg
fix logo and sprite, delete fonts logo

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -4,12 +4,14 @@
     <div>
       <i class="icon-facebook"></i>
       <i class="icon-instagram"></i>
-      <i class="icon-logo"></i>
       <i class="icon-phone"></i>
       <i class="icon-skype"></i>
       <i class="icon-whatsapp"></i>
       <svg class="svg-email" aria-label="email">
         <use xlink:href="./assets/images/sprite.svg#icon-email"></use>
+      </svg>
+      <svg class="svg-logo" aria-label="logo">
+        <use xlink:href="./assets/images/sprite.svg#icon-logo-dent"></use>
       </svg>
     </div>
   </div>
