SD-4: add header, add mob menu

--- a/src/assets/scss/layouts/_header.scss
+++ b/src/assets/scss/layouts/_header.scss
@@ -1,10 +1,14 @@
 .header {
-  padding-top: 12px;
-  &__container {
+  padding: 12px 0 16px;
+
+  @include mq(tablet) {
+    padding-top: 20px;
+  }
+  /* &__container {
     display: flex;
     align-items: center;
     @include mq(mobile-only) {
       justify-content: space-between;
     }
-  }
+  } */
 }
