--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,14 +1,6 @@
 <header class="header">
   <div class="container header__container">
-    <a href="#" class="header__logo" aria-label="logo"
-      ><i class="icon-logo"></i> <span>dent</span></a
-    >{% include 'components/nav-menu.html' %}
-    <button
-      type="button"
-      class="mobile-menu-btn icon-burger-menu"
-      data-menu-btn
-      aria-label="Open menu"
-    ></button>
+  {% include 'components/nav-menu.html' %}
   </div>
 </header>
 {% include 'components/mobile-menu.html' %}
