--- a/src/html/partials/sections/our_team.html
+++ b/src/html/partials/sections/our_team.html
@@ -1,4 +1,4 @@
-<section class="our-team" id="team">
+<section class="our-team" id="team" style="height: 1000px;">
   <div class="container">
     Our team
     <div>
