--- a/src/assets/scss/components/_mobile-menu.scss
+++ b/src/assets/scss/components/_mobile-menu.scss
@@ -1,5 +1,100 @@
 .mobile-menu {
-  @include mq(desktop) {
-    display: none;
+  padding: 59px 0 40px;
+  transform: translateX(100%);
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  top: 48px;
+  width: 100vw;
+  background-color: var(--primary-bg);
+  z-index: 200;
+  transition: transform 250ms;
+  overflow: auto;
+  @include mq(tablet) {
+    max-width: 320px;
+    top: 0;
+    right: 0;
+    left: auto;
+    overflow: hidden;
+  }
+
+  &--opened {
+    transform: translateX(0);
   }
 }
+
+.nav__mobile {
+  .nav__mobile-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .nav__mobile-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    &:not(:first-child) {
+      margin-top: 16px;
+    }
+    &:not(:last-child)::after {
+      display: block;
+      content: '';
+      width: 8px;
+      height: 8px;
+      border-radius: 50%;
+      background-color: var(--normal-bg);
+      margin-top: 16px;
+    }
+  }
+
+  .nav__mobile-link {
+    font-size: 16px;
+    font-weight: 600;
+  }
+
+  .nav__mobile-btn {
+    display: block;
+    margin: 0 auto;
+    margin-top: 119px;
+  }
+
+  .nav__mobile-contacts-list {
+    margin-top: 24px;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .nav__mobile-contacts-item {
+    display: flex;
+    align-items: center;
+    color: var(--secondary-txt-cl);
+  }
+
+  .nav__mobile-icon-wrapper {
+    width: 24px;
+    height: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--accent-txt-cl);
+    border-radius: 5px;
+    margin-right: 6px;
+  }
+
+  .nav__mobile-icon {
+    fill: var(--hover-bg);
+  }
+
+  .nav__mobile-label {
+    font-size: 12px;
+    font-weight: 600;
+  }
+
+  .nav__mobile-contacts-title {
+    font-size: 12px;
+    margin-top: 4px;
+  }
+
+}
+
