--- a/src/assets/scss/components/_nav-menu.scss
+++ b/src/assets/scss/components/_nav-menu.scss
@@ -2,11 +2,70 @@
   display: flex;
   align-items: center;
   white-space: nowrap;
+  justify-content: space-between;
+
+  .nav__logo-icon {
+    width: 104px;
+    height: 32px;
+  }
+
+  .nav__burger {
+    position: relative;
+    width: 24px;
+    display: flex;
+    flex-direction: column;
+    transition: all 0.3s;
+    cursor: pointer;
+
+    @include mq(tablet) {
+
+    }    
+  
+    .nav__burger-bar:not(:last-child) {
+      display: inline-block;
+      margin-bottom: 6px;
+    }
+  }
+  
+  .nav__burger-bar {
+    background-color: var(--primary-txt-cl);
+    height: 2px;
+    width: 24px;
+    border-radius: 5px;
+    transition: all 0.3s ease-in-out;
+    z-index: 201;
+  }
 }
 
 .nav-list {
   display: none;
   @include mq(desktop) {
     display: flex;
+  }
+}
+
+.nav__burger-opened {
+
+  .nav__burger-bar:first-child {
+    transform: rotate(45deg) translateX(28%);
+    height: 1px;
+    align-self: center;
+    margin-bottom: 0px;
+  }
+
+  .nav__burger-bar:nth-of-type(2) {
+    display: none;
+    opacity: 0;
+    height: 0;
+    margin: -3px;
+  }
+
+  .nav__burger-bar:last-child {
+    position: relative;
+    bottom: 1px;
+    transform: rotate(-45deg) translateX(25%);
+    transition-delay: 0s;
+    height: 1px;
+    align-self: center;
   }
 }
