--- a/src/html/partials/components/nav-menu.html
+++ b/src/html/partials/components/nav-menu.html
@@ -1,4 +1,11 @@
 <nav class="nav">
+  <div class="nav__logo">
+    <a href="#" aria-label="logo">
+      <svg class="nav__logo-icon" width="72" height="22">
+        <use href="./assets/images/sprite.svg#icon-logo-dent"></use>
+      </svg>
+    </a>
+  </div>
   <ul class="nav-list">
     <li><a href="#">Home</a></li>
     <li><a href="#about-us">About us</a></li>
@@ -7,4 +14,9 @@
     <li><a href="#reviews">Reviews</a></li>
     <li><a href="#contacts">Contacts</a></li>
   </ul>
+  <button class="nav__burger" aria-label="show-menu" type="button">
+    <span class="nav__burger-bar"></span>
+    <span class="nav__burger-bar"></span>
+    <span class="nav__burger-bar"></span>
+  </button>
 </nav>
