--- a/src/html/partials/sections/about_us.html
+++ b/src/html/partials/sections/about_us.html
@@ -10,7 +10,7 @@
       </p>
     </div>
     <div class="about-us__img-wrapper">
-      <picture class="about-us__img">
+      <picture>
         <source
           srcset="
             ./assets/images/about-us/about-us-mobile.webp    1x,
@@ -65,10 +65,11 @@
         />
 
         <img
+          class="about-us__img"
           src="./assets/images/about-us/about-us-mobile.png"
           alt="girl with ginger hair with perfectly white smile sticking"
           width="272"
-          height="288"
+          height="287"
           loading="lazy"
         />
       </picture>
