--- a/src/assets/scss/components/_nav-menu.scss
+++ b/src/assets/scss/components/_nav-menu.scss
@@ -9,6 +9,41 @@
     height: 32px;
   }
 
+  .nav-list {
+    display: none;
+  
+    @include mq(desktop) {
+      display: flex;
+      
+    }
+  }
+
+  .nav-list__item {
+    font-size: 16px;
+    font-weight: 600;
+  }
+
+  .nav-list__item:not(:first-child) {
+    margin-left: 60px;
+  }
+
+  .nav__btn-wrapper {
+    display: flex;
+    align-items: center;
+  }
+
+  .nav__btn {
+    display: none;
+
+    @include mq(tablet) {
+      display: block;
+      padding: 11.5px 16.5px;
+      border-radius: 12px;
+      letter-spacing: 1px;
+      font-weight: 600;
+    } 
+  }
+
   .nav__burger {
     position: relative;
     width: 24px;
@@ -18,8 +53,11 @@
     cursor: pointer;
 
     @include mq(tablet) {
-
-    }    
+      margin-left: 24px;
+    }
+    @include mq(desktop) {
+      display: none;
+    }     
   
     .nav__burger-bar:not(:last-child) {
       display: inline-block;
@@ -34,13 +72,6 @@
     border-radius: 5px;
     transition: all 0.3s ease-in-out;
     z-index: 201;
-  }
-}
-
-.nav-list {
-  display: none;
-  @include mq(desktop) {
-    display: flex;
   }
 }
 
