--- a/src/assets/scss/sections/_hero.scss
+++ b/src/assets/scss/sections/_hero.scss
@@ -1,1 +1,317 @@
-// hero
+.hero__section {
+  padding-top: 18px;
+
+  @include mq(tablet) {
+    padding-top: 36px;
+  }
+  @include mq(desktop) {
+    padding-top: 50px;
+  }
+}
+
+.hero__content-wrapper {
+  @include mq(tablet) {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+.hero__text-wrapper {
+  @include mq(tablet) {
+    padding-top: 41px;
+    width: 365px;
+  }
+  @include mq(desktop) {
+    padding-top: 77px;
+    width: 592px;
+  }
+}
+
+.hero__title {
+  font-size: 32px;
+  font-weight: 700;
+  margin-bottom: 20px;
+
+  @include mq(tablet) {
+    font-size: 40px;
+    line-height: calc(49 / 40);
+    margin-bottom: 32px;
+  }
+
+  @include mq(desktop) {
+    font-size: 64px;
+    line-height: calc(78 / 64);
+  }
+}
+
+.hero__title-color {
+  color: var(--normal-bg);
+}
+
+.hero__schedule-block {
+  display: flex;
+  position: absolute;
+  align-items: center;
+  z-index: 201;
+  background-color: var(--accent-txt-cl);
+  border-radius: 10px;
+  padding: 8px 4px;
+  right: 0;
+  bottom: 21px;
+  box-shadow: var(--main-shadow);
+
+  @include mq(tablet) {
+    padding: 4px 15px 4px 6px;
+    bottom: 0;
+    left: 0;
+    max-width: 239px;
+  }
+
+  @include mq(tablet) {
+    bottom: 26px;
+  }
+}
+
+.hero__schedule-label,
+.hero__schedule-title {
+  font-size: 12px;
+  line-height: calc(12 / 10);
+
+  @include mq(tablet) {
+    font-size: 14px;
+    line-height: calc(24 / 14);
+  }
+}
+
+.hero__schedule-title {
+  color: var(--secondary-txt-cl);
+}
+
+.hero__schedule-label {
+  font-weight: 600;
+}
+
+.hero__schedule-wrapper {
+  margin-left: 4px;
+
+  @include mq(tablet) {
+    margin-left: 8px;
+  }
+}
+
+.hero__schedule-icon-wrapper {
+  width: 24px;
+  height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--hover-bg);
+  border-radius: 5px;
+
+  @include mq(tablet) {
+    width: 44px;
+    height: 44px;
+    border-radius: 10px;
+  }
+}
+
+.hero__schedule-icon {
+  fill: var(--accent-txt-cl);
+  stroke: var(--hover-bg);
+
+  @include mq(tablet) {
+    width: 20px;
+    height: 20px;
+  }
+}
+
+.hero__img-wrapper {
+  height: 271px;
+  width: 100%;
+  position: relative;
+
+  @include mq(tablet) {
+    width: 336px;
+    height: 336px;
+  }
+
+  @include mq(desktop) {
+    width: 592px;
+    height: 592px;
+    margin-top: 28px;
+  }
+}
+
+.hero__img-wrapper-first,
+.hero__img-wrapper-second {
+  border-radius: 50%;
+  height: 263px;
+  width: 263px;
+  position: absolute;
+  top: 8px;
+
+  @include mq(tablet) {
+    width: 326px;
+    height: 326px;
+  }
+
+  @include mq(desktop) {
+    width: 574px;
+    height: 574px;
+    top: 17px;
+  }
+}
+
+.hero__img-wrapper-first {
+  border: 2px dashed var(--normal-bg);
+  left: 3px;
+  animation: 100s /* var(--transition-timing-function) */ linear infinite rot;
+
+  @include mq(desktop) {
+    left: 7px;
+  }
+}
+
+.hero__img-wrapper-second {
+  border: 1px dashed var(--hover-bg);
+  left: 7px;
+  animation: 100s /* var(--transition-timing-function) */ linear infinite rotInverse;
+
+  @include mq(desktop) {
+    left: 16px;
+  }
+}
+
+@keyframes rot {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes rotInverse {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(-360deg);
+  }
+}
+
+.hero__img {
+  position: absolute;
+
+  @include mq(tablet) {
+    width: 336px;
+    height: 336px;
+  }
+
+  @include mq(desktop) {
+    width: 592px;
+    height: 592px;
+  }
+}
+
+.hero__text,
+.hero__title-text {
+  font-size: 16px;
+  font-weight: 600;
+  color: var(--secondary-txt-cl);
+  line-height: calc(25 / 16);
+}
+
+.hero__title-text {
+  display: none;
+
+  @include mq(tablet) {
+    display: block;
+  }
+
+  @include mq(desktop) {
+    display: block;
+    font-size: 20px;
+  }
+}
+
+.hero__text {
+  margin-top: 22px;
+  margin-bottom: 23px;
+
+  @include mq(tablet) {
+    display: none;
+  }
+}
+
+.hero__btn {
+  display: none;
+  @include mq(tablet) {
+    display: block;
+    font-size: 16px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    margin-top: 40px;
+  }
+}
+
+.hero__mob-btn {
+    font-size: 16px;
+    font-weight: 600;
+    letter-spacing: 1px;
+
+    @include mq(tablet) {
+        display: none;
+    }
+}
+
+.hero__list {
+  display: none;
+
+  @include mq(tablet) {
+    display: flex;
+    margin-top: 40px;
+  }
+
+  @include mq(desktop) {
+    margin-top: 66px;
+  }
+
+  .hero__item {
+    display: flex;
+    align-items: center;
+
+    &:last-child {
+      margin-left: 42px;
+    }
+  }
+
+  .hero__icon-wrapper {
+    width: 44px;
+    height: 44px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--accent-txt-cl);
+    border-radius: 10px;
+    box-shadow: var(--main-shadow);
+  }
+
+  .hero__icon {
+    fill: var(--hover-bg);
+  }
+
+  .hero__info-wrapper {
+    margin-left: 8px;
+  }
+
+  .hero__label {
+    font-size: 14px;
+    font-weight: 600;
+    line-height: calc(24 / 14);
+  }
+
+  .hero__contacts-title {
+    color: var(--secondary-txt-cl);
+  }
+}
