--- a/src/assets/scss/utils/_variables.scss
+++ b/src/assets/scss/utils/_variables.scss
@@ -13,7 +13,7 @@
 
   /* SHADOW */
 
-  --main-shadow: box-shadow: 0px 4px 4px rgba(187, 187, 187, 0.25);
+  --main-shadow: 0px 4px 4px rgba(187, 187, 187, 0.25);
 
   /* FONTS */
   --main-font: 'Montserrat', sans-serif;
@@ -23,4 +23,5 @@
   --fast: 0.2s;
   --slow: 0.4s;
   --mobile: 320px;
+  --transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
