--- a/src/html/partials/components/nav-menu.html
+++ b/src/html/partials/components/nav-menu.html
@@ -7,16 +7,19 @@
     </a>
   </div>
   <ul class="nav-list">
-    <li><a href="#">Home</a></li>
-    <li><a href="#about-us">About us</a></li>
-    <li><a href="#services">Our services</a></li>
-    <li><a href="#team">Our Team</a></li>
-    <li><a href="#reviews">Reviews</a></li>
-    <li><a href="#contacts">Contacts</a></li>
+    <li class="nav-list__item"><a href="#">Home</a></li>
+    <li class="nav-list__item"><a href="#about-us">About us</a></li>
+    <li class="nav-list__item"><a href="#services">Our services</a></li>
+    <li class="nav-list__item"><a href="#team">Our Team</a></li>
+    <li class="nav-list__item"><a href="#reviews">Reviews</a></li>
+    <li class="nav-list__item"><a href="#contacts">Contacts</a></li>
   </ul>
-  <button class="nav__burger" aria-label="show-menu" type="button">
-    <span class="nav__burger-bar"></span>
-    <span class="nav__burger-bar"></span>
-    <span class="nav__burger-bar"></span>
-  </button>
+  <div class="nav__btn-wrapper">
+    <button class="nav__btn btn">Contact us</button>
+    <button class="nav__burger" aria-label="show-menu" type="button">
+      <span class="nav__burger-bar"></span>
+      <span class="nav__burger-bar"></span>
+      <span class="nav__burger-bar"></span>
+    </button>
+  </div>
 </nav>
