--- a/src/html/partials/sections/hero.html
+++ b/src/html/partials/sections/hero.html
@@ -1,3 +1,100 @@
-<section>
-  <div class="container">Hero</div>
+<section class="hero__section section">
+  <div class="container">
+    <div class="hero__content-wrapper">
+      <div class="hero__text-wrapper">
+        <h1 class="hero__title">
+          <span class="hero__title-color">We</span> always
+          <span class="hero__title-color">care</span> about your perfect
+          <span class="hero__title-color">smile</span>
+        </h1>
+        <p class="hero__title-text">
+          Helping you to truly express yourself and your smile with the help of our professionals
+        </p>
+        <button class="hero__btn btn">Book now</button>
+
+        <ul class="hero__list">
+          <li class="hero__item">
+            <div class="hero__icon-wrapper">
+              <svg class="hero__icon" height="16" width="16" aria-label="phone">
+                <use href="./assets/images/sprite.svg#icon-phone"></use>
+              </svg>
+            </div>
+            <div class="hero__info-wrapper">
+              <p class="hero__label">Phone Number</p>
+              <a href="tel:+442074071668" class="hero__contacts-title">+44 20 7407 1668</a>
+            </div>
+          </li>
+          <li class="hero__item">
+            <div class="hero__icon-wrapper">
+              <svg class="hero__icon" height="16" width="16" aria-label="address">
+                <use href="./assets/images/sprite.svg#icon-navigate"></use>
+              </svg>
+            </div>
+            <div class="hero__info-wrapper">
+              <p class="hero__label">London</p>
+              <p class="hero__contacts-title">401 Broadway</p>
+            </div>
+          </li>
+        </ul>
+        
+      </div>
+      <div class="hero__img-wrapper">
+        <div class="hero__schedule-block">
+          <div class="hero__schedule-icon-wrapper">
+            <svg class="hero__schedule-icon" height="11" width="11" aria-label="clock">
+              <use href="./assets/images/sprite.svg#icon-time"></use>
+            </svg>
+          </div>
+          <div class="hero__schedule-wrapper">
+            <p class="hero__schedule-label">Opening Hours</p>
+            <p class="hero__schedule-title">Mon-Sun: 9 a.m.- 8 p.m.</p>
+          </div>
+        </div>
+        <picture>
+          <source
+            srcset="./assets/images/hero/hero-mob.webp 1x, ./assets/images/hero/hero-mob@2x.webp 2x"
+            media="(min-width: 320px)"
+            type="image/webp"
+          />
+          <source
+            srcset="./assets/images/hero/hero-mob.png 1x, ./assets/images/hero/hero-mob@2x.png 2x"
+            media="(min-width: 320px)"
+            type="image/png"
+          />
+          <source
+            srcset="./assets/images/hero/hero-tab.webp 1x, ./assets/images/hero/hero-tab@2x.webp 2x"
+            media="(min-width: 768px)"
+            type="image/webp"
+          />
+          <source
+            srcset="./assets/images/hero/hero-tab.png 1x, ./assets/images/hero/hero-tab@2x.png 2x"
+            media="(min-width: 768px)"
+            type="image/png"
+          />
+          <source
+            srcset="./assets/images/hero/hero-mob.webp 1x, ./assets/images/hero/hero-mob@2x.webp 2x"
+            media="(min-width: 1280px)"
+            type="image/webp"
+          />
+          <source
+            srcset="./assets/images/hero/hero-mob.png 1x, ./assets/images/hero/hero-mob@2x.png 2x"
+            media="(min-width: 1280px)"
+            type="image/png"
+          />
+          <img
+            class="hero__img"
+            src="./assets/images/hero/hero-mob.png"
+            alt="Smiling girl"
+            loading="lazy"
+          />
+        </picture>
+        <div class="hero__img-wrapper-first"></div>
+        <div class="hero__img-wrapper-second"></div>
+      </div>
+      <p class="hero__text">
+        Helping you to truly express yourself and your smile with the help of our professionals
+      </p>
+      <button class="hero__mob-btn btn">Book now</button>
+    </div>
+  </div>
 </section>
