SD:16-add-about-info
add-about-info add js counter

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -20,6 +20,7 @@
 
 @import './sections/hero';
 @import './sections/about_us';
+@import './sections/about_info';
 @import './sections/our_service';
 @import './sections/our_team';
 @import './sections/our_reviews';
