--- a/src/assets/scss/sections/_about_us.scss
+++ b/src/assets/scss/sections/_about_us.scss
@@ -1,4 +1,13 @@
 .about-us {
+  @include mq(mobile-only) {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+
+  @include mq(tablet) {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
   &__container {
     position: relative;
     @include mq(tablet) {
