--- a/src/html/partials/sections/about_us.html
+++ b/src/html/partials/sections/about_us.html
@@ -1,4 +1,4 @@
-<section class="section about-us" id="about-us">
+<section class="about-us" id="about-us">
   <div class="container about-us__container">
     <div class="about-us__block block-about">
       <span class="block-about__before-title">Why Choose Us</span>
