SD-7: imgs add, burger func add

--- a/src/html/partials/layout.html
+++ b/src/html/partials/layout.html
@@ -7,6 +7,11 @@
   <body>
     <div class="page">{% block content %} {% endblock %}</div>
     {% include 'components/modal.html' %}
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script
+      src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
+    ></script>
     <script src="assets/js/app.js"></script>
   </body>
 </html>
