--- a/src/html/partials/sections/hero.html
+++ b/src/html/partials/sections/hero.html
@@ -36,7 +36,6 @@
             </div>
           </li>
         </ul>
-        
       </div>
       <div class="hero__img-wrapper">
         <div class="hero__schedule-block">
@@ -53,31 +52,34 @@
         <picture>
           <source
             srcset="./assets/images/hero/hero-mob.webp 1x, ./assets/images/hero/hero-mob@2x.webp 2x"
-            media="(min-width: 320px)"
+            media="(max-width: 767px)"
             type="image/webp"
           />
           <source
             srcset="./assets/images/hero/hero-mob.png 1x, ./assets/images/hero/hero-mob@2x.png 2x"
-            media="(min-width: 320px)"
+            media="(max-width: 767px)"
             type="image/png"
           />
           <source
             srcset="./assets/images/hero/hero-tab.webp 1x, ./assets/images/hero/hero-tab@2x.webp 2x"
-            media="(min-width: 768px)"
+            media="(max-width: 1279px)"
             type="image/webp"
           />
           <source
             srcset="./assets/images/hero/hero-tab.png 1x, ./assets/images/hero/hero-tab@2x.png 2x"
-            media="(min-width: 768px)"
+            media="(max-width: 1279px)"
             type="image/png"
           />
           <source
-            srcset="./assets/images/hero/hero-mob.webp 1x, ./assets/images/hero/hero-mob@2x.webp 2x"
+            srcset="
+              ./assets/images/hero/hero-desk.webp    1x,
+              ./assets/images/hero/hero-desk@2x.webp 2x
+            "
             media="(min-width: 1280px)"
             type="image/webp"
           />
           <source
-            srcset="./assets/images/hero/hero-mob.png 1x, ./assets/images/hero/hero-mob@2x.png 2x"
+            srcset="./assets/images/hero/hero-desk.png 1x, ./assets/images/hero/hero-desk@2x.png 2x"
             media="(min-width: 1280px)"
             type="image/png"
           />
@@ -85,7 +87,8 @@
             class="hero__img"
             src="./assets/images/hero/hero-mob.png"
             alt="Smiling girl"
-            loading="lazy"
+            width="272"
+            height="271"
           />
         </picture>
         <div class="hero__img-wrapper-first"></div>
